# mobile

./: .eslintrc.js  .gitignore  .station-version  App.tsx  CONTRIBUTING.md  README.md  RrnMobileFfi.podspec  SECURITY.md  app.json  index.js  jest.config.js  package.json  tailwind.config.js  tsconfig.json  ubrn.config.yaml
__mocks__/: react-native-qrcode-svg.js  react-native-svg.js  react-native-vision-camera.js
__tests__/: HeldShardsScreen.test.tsx  QRScanner.test.tsx  SecureStore.test.ts  SignedPayload.test.ts  Text.test.tsx  Wallet.test.ts  address.test.ts  addressQr.test.ts  amount.test.tsx  backgroundCredential.test.ts  backgroundSync.test.ts  base64.test.ts  cbor.test.ts  changePassphrase.test.tsx  communityScreen.test.tsx  confirmReceived.test.tsx  confirmation.test.ts  discovery.test.ts  discoveryScreen.test.tsx  eventNotification.test.ts  factoryReset.test.tsx  ffi_invariants.test.ts  heldShards.test.ts  hex.test.ts  history.test.tsx  home.test.tsx  inbox.test.ts  ledgerFormat.test.ts  notificationPrefs.test.ts  notificationSettingsScreen.test.tsx  onboarding.test.tsx  pairedStation.test.ts  pairedStationsScreen.test.tsx  pairing.test.ts  pairingCrossPlatform.test.ts  pairingScreen.test.tsx  passphraseStrength.test.ts  profile.test.ts  (+23 more)
ios/: Podfile  (+2 more)
modules/rrn-discovery/android/: CMakeLists.txt  build.gradle
modules/rrn-discovery/android/src/main/: AndroidManifest.xml
modules/rrn-discovery/android/src/main/cpp/: cpp-adapter.cpp
modules/rrn-discovery/android/src/main/java/com/margelo/nitro/rrndiscovery/: HybridStationDiscovery.kt  RrnDiscoveryPackage.kt
(+154 files in other folders)
